Bug #16591 Partitions: crash using information_schema.partitions
Submitted: 18 Jan 2006 3:02 Modified: 21 Feb 2006 23:08
Reporter: Peter Gulutzan
Status: Closed
Category:Server: Partition Severity:S3 (Non-critical)
Version:5.1.6-alpha-debug OS:Linux (SUSE 10.0)
Assigned to: Sergey Gluhov Target Version:

[18 Jan 2006 3:02] Peter Gulutzan
Description:
I create a partitioned table using the -max server.
I select from information_schema.partitions with a non-max server.
Crash.

How to repeat:
BUILD/compile-pentium-debug-max
Start server
Connect with client
USE any database (I use "db1")

mysql> create table t (s1 int) partition by list (s1) (partition p1 values in (1));
Query OK, 0 rows affected (0.03 sec)

mysql> select count(*) from information_schema.partitions;
+----------+
| count(*) |
+----------+
|       40 |                         /* the number doesn't matter */
+----------+
1 row in set (0.03 sec)

Stop server

BUILD/compile-pentium-debug
Start server
Connect with client
USE any database (I use "db1")

mysql> select count(*) from information_schema.partitions;
ERROR 2013 (HY000): Lost connection to MySQL server during query
[18 Jan 2006 12:58] Miguel Solorzano
Welcome to the MySQL monitor.  Commands end with ; or \g.
Your MySQL connection id is 1 to server version: 5.1.6-alpha-debug

Type 'help;' or '\h' for help. Type '\c' to clear the buffer.

mysql> select count(*) from information_schema.partitions;
ERROR 2013 (HY000): Lost connection to MySQL server during query
mysql> 

Version: '5.1.6-alpha-debug'  socket: '/tmp/mysql.sock'  port: 3306  Source distribution
030418  9:56:27 [ERROR] libexec/mysqld: Incorrect information in file: './db1/t.frm'
030418  9:56:31 [ERROR] libexec/mysqld: Incorrect information in file: './db1/t.frm'
mysqld got signal 11;
[18 Jan 2006 12:58] Miguel Solorzano
Welcome to the MySQL monitor.  Commands end with ; or \g.
Your MySQL connection id is 1 to server version: 5.1.6-alpha-debug

Type 'help;' or '\h' for help. Type '\c' to clear the buffer.

mysql> select count(*) from information_schema.partitions;
ERROR 2013 (HY000): Lost connection to MySQL server during query
mysql> 

Version: '5.1.6-alpha-debug'  socket: '/tmp/mysql.sock'  port: 3306  Source distribution
030418  9:56:27 [ERROR] libexec/mysqld: Incorrect information in file: './db1/t.frm'
030418  9:56:31 [ERROR] libexec/mysqld: Incorrect information in file: './db1/t.frm'
mysqld got signal 11;
[24 Jan 2006 9:36] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/1551
[6 Feb 2006 13:03] Sergey Gluhov
http://lists.mysql.com/commits/2184
[14 Feb 2006 10:00] Sergey Gluhov
Fixed in 5.1.7
[21 Feb 2006 23:08] Mike Hillyer
Documented in 5.1.7 changelog:

 <listitem>
        <para>
          Querying the <literal>INFORMATION_SCHEMA.partitions</literal>
          table on a non-max server caused a server crash. (Bug #16591)
        </para>
      </listitem>