Bug#16591 Partitions: crash using information_schema.partitions Bug#16695 Reading I_S.PARTITIONS with pre-5.1.6 partitioned tables crashes server  issue a warning in case of error during table opening